db: _identify_media() should also set media ID

For the new _identify_media() method to be able to easily replace
_db_guess_os_from_media() usage in apps as it intends to, it must
provide the ID of the media in the DB.

This fixes a recent regression in Boxes caused by switching to
_identify_media():

https://bugzilla.gnome.org/show_bug.cgi?id=685826#c35 (and following
comments)